cm4all-beng-proxy (0.4.7) unstable; urgency=low

  * http-server: use istream_null for empty request body
  * parser: check for trailing slash only in TAG_OPEN tags
  * parser: added support for XML Processing Instructions
  * processor: implemented XML Processing Instruction "cm4all-rewrite-uri"
  * uri-escape: escape the slash character
  * cache: remove all matching items in cache_remove()

 --

cm4all-beng-proxy (0.4.6) unstable; urgency=low

  * file_handler: fixed logic error in If-Modified-Since check
  * date: return UTC time stamp in http_date_parse()
  * cache: continue search after item was invalidated
  * cache: remove the correct cache item
  * istream-chunked: work around invalid assertion failure
  * istream-subst: fixed corruption after partial match

 -- Max Kellermann <mk@cm4all.com>  Wed, 25 Mar 2009 15:03:10 +0100

cm4all-beng-proxy (0.4.5) unstable; urgency=low

  * http-server: assume keep-alive is enabled on HTTP 1.1
  * http-client: unregister EV_READ when the buffer is full
  * translation: added QUERY_STRING packet
  * processor: optionally parse base/mode from URI

 -- Max Kellermann <mk@cm4all.com>  Tue, 17 Mar 2009 13:04:25 +0100

cm4all-beng-proxy (0.4.4) unstable; urgency=low

  * forward Accept-Language request header to the translation server
  * translate: added the USER_AGENT request packet
  * session: obey the USER/MAX_AGE setting
  * use libcm4all-inline-dev in libcm4all-beng-proxy-dev
  * added pkg-config file for libcm4all-beng-proxy-dev
  * updated python-central dependencies
  * processor: parse c:base/c:mode attributes in PARAM tags

 -- Max Kellermann <mk@cm4all.com>  Wed, 11 Mar 2009 09:43:48 +0100

cm4all-beng-proxy (0.4.3) unstable; urgency=low

  * processor: rewrite URI in LINK tags
  * processor: rewrite URI in PARAM tags
  * use splice() from glibc 2.7
  * translate: added VARY response packet
  * build documentation with texlive

 -- Max Kellermann <mk@cm4all.com>  Wed, 04 Mar 2009 09:53:56 +0100
